--- a/src/main/resources/en.properties
+++ b/src/main/resources/en.properties
@@ -19,7 +19,7 @@
 19=Nineteen
 20=Twenty
 30=Thirty
-40=Fourty
+40=Forty
 50=Fifty
 60=Sixty
 70=Seventy
@@ -43,4 +43,4 @@
 7000=Seven thousand
 8000=Eight thousand
 9000=Nine thousand
-10000= Ten thousand
+10000=Ten thousand
